Corrected letter-spacing for <h2>

--- a/css/style.css
+++ b/css/style.css
@@ -667,7 +667,7 @@ outline: none;
 	#my_works h2, #about_me h2, #my_story h2, #contact_me h2 {
 	 font-size: 2rem;
 	 line-height: 2.12rem;
-	 letter-spacing: 0.16rem;
+	 letter-spacing: 0.13rem;
 	 padding: 5rem 0rem 1rem 0rem;
 	}
 
@@ -790,7 +790,7 @@ outline: none;
 	#my_works h2, #about_me h2, #my_story h2, #contact_me h2 {
 	 font-size: 2rem;
 	 line-height: 2.12rem;
-	 letter-spacing: 0.16rem;
+	 letter-spacing: 0.13rem;
 	 padding: 5rem 0rem 1rem 0rem;
 	}
 
